Replaced the eraser icons with three dots icons.

--- a/index.html
+++ b/index.html
@@ -143,8 +143,8 @@
               <div class="th-content">
                 <span class="label">日時</span>
                 <div class="op dropdown fw-light">
-                  <button class="btn btn-sm btn-light dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
-                    <i class="bi bi-eraser-fill"></i>
+                  <button class="btn btn-sm btn-light rounded-circle dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
+                    <i class="bi bi-three-dots-vertical"></i>
                   </button>
                   <ul class="dropdown-menu">
                     <li><a class="dropdown-item" data-target-name="datetime" data-op-name="clear-all">すべての行を消去
@@ -161,8 +161,8 @@
               <div class="th-content">
                 <span class="label">緯度</span>
                 <div class="op dropdown fw-light">
-                  <button class="btn btn-sm btn-light dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
-                    <i class="bi bi-eraser-fill"></i>
+                  <button class="btn btn-sm btn-light rounded-circle dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
+                    <i class="bi bi-three-dots-vertical"></i>
                   </button>
                   <ul class="dropdown-menu">
                     <li><a class="dropdown-item" data-target-name="latitude" data-op-name="clear-all">すべての行を消去
@@ -179,8 +179,8 @@
               <div class="th-content">
                 <span class="label">経度</span>
                 <div class="op dropdown fw-light">
-                  <button class="btn btn-sm btn-light dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
-                    <i class="bi bi-eraser-fill"></i>
+                  <button class="btn btn-sm btn-light rounded-circle dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
+                    <i class="bi bi-three-dots-vertical"></i>
                   </button>
                   <ul class="dropdown-menu">
                     <li><a class="dropdown-item" data-target-name="longitude" data-op-name="clear-all">すべての行を消去
@@ -197,8 +197,8 @@
               <div class="th-content">
                 <span class="label">標高</span>
                 <div class="op dropdown fw-light">
-                  <button class="btn btn-sm btn-light dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
-                    <i class="bi bi-eraser-fill"></i>
+                  <button class="btn btn-sm btn-light rounded-circle dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
+                    <i class="bi bi-three-dots-vertical"></i>
                   </button>
                   <ul class="dropdown-menu">
                     <li><a class="dropdown-item" data-target-name="elevation" data-op-name="clear-all">すべての行を消去
