Implemented several JS functions includiong fetchTile.

--- a/index.html
+++ b/index.html
@@ -207,6 +207,7 @@
                     </a></li>
                     <li><a class="dropdown-item" data-target-name="elevation" data-op-name="clear-unchecked">チェックされていない行を消去
                     </a></li>
+                    <li><a class="dropdown-item" data-target-name="elevation" data-op-name="replace-all" title="未記入の標高を国土地理院の標高に置き換えます。">国土地理院の標高で更新</a></li>
                   </ul>
                 </div>
               </div>
