Arranged the menu options in the table header menu.

--- a/index.html
+++ b/index.html
@@ -145,10 +145,10 @@
                     <i class="bi bi-three-dots-vertical"></i>
                   </button>
                   <ul class="dropdown-menu">
-                    <li><a class="dropdown-item" data-target-name="check" data-op-name="turn-on">チェック ON
+                    <li><a class="dropdown-item" data-target-name="check" data-op-name="turn-on"><i class="bi bi-check-square me-1"></i>チェック ON
                     </a></li>
-                    <li><a class="dropdown-item" data-target-name="check" data-op-name="turn-off">チェック OFF</a></li>
-                    <li><a class="dropdown-item" data-target-name="check" data-op-name="toggle">チェック反転</a></li>
+                    <li><a class="dropdown-item" data-target-name="check" data-op-name="turn-off"><i class="bi bi-square me-1"></i>チェック OFF</a></li>
+                    <li><a class="dropdown-item" data-target-name="check" data-op-name="toggle"><i class="bi bi-arrow-repeat me-1"></i>チェック反転</a></li>
                   </ul>
                 </div>
               </div>
@@ -161,16 +161,13 @@
                     <i class="bi bi-three-dots-vertical"></i>
                   </button>
                   <ul class="dropdown-menu">
-                    <li><a class="dropdown-item" data-target-name="datetime" data-op-name="clear-all">すべての行を消去
-                    </a></li>
-                    <li><a class="dropdown-item" data-target-name="datetime" data-op-name="clear-checked">チェックされた行を消去
-                    </a></li>
-                    <li><a class="dropdown-item" data-target-name="datetime" data-op-name="clear-unchecked">チェックされていない行を消去
-                    </a></li>
+                    <!-- <li><a class="dropdown-item" data-target-name="datetime" data-op-name="clear-all">すべての行を消去</a></li> -->
+                    <li><a class="dropdown-item" data-target-name="datetime" data-op-name="clear-checked" title="チェックされた行の日時を消去します。"><i class="bi bi-eraser-fill me-1"></i>選択された日時を消去</a></li>
+                    <!-- <li><a class="dropdown-item" data-target-name="datetime" data-op-name="clear-unchecked">チェックされていない行を消去</a></li> -->
                   </ul>
                 </div>
               </th>
-            <th class="eraser"></th>
+            <!-- <th class="eraser"></th> -->
             <th class="latitude">
               <div class="th-content d-flex justify-content-between align-items-center">
                 <span class="label">緯度</span>
@@ -179,12 +176,9 @@
                     <i class="bi bi-three-dots-vertical"></i>
                   </button>
                   <ul class="dropdown-menu">
-                    <li><a class="dropdown-item" data-target-name="latitude" data-op-name="clear-all">すべての行を消去
-                    </a></li>
-                    <li><a class="dropdown-item" data-target-name="latitude" data-op-name="clear-checked">チェックされた行を消去
-                    </a></li>
-                    <li><a class="dropdown-item" data-target-name="latitude" data-op-name="clear-unchecked">チェックされていない行を消去
-                    </a></li>
+                    <!-- <li><a class="dropdown-item" data-target-name="latitude" data-op-name="clear-all">すべての行を消去</a></li> -->
+                    <li><a class="dropdown-item" data-target-name="latitude" data-op-name="clear-checked" title="チェックされた行の緯度を消去します。"><i class="bi bi-eraser-fill me-1"></i>選択された緯度を消去</a></li>
+                    <!-- <li><a class="dropdown-item" data-target-name="latitude" data-op-name="clear-unchecked">チェックされていない行を消去</a></li> -->
                   </ul>
                 </div>
               </div>
@@ -197,12 +191,9 @@
                     <i class="bi bi-three-dots-vertical"></i>
                   </button>
                   <ul class="dropdown-menu">
-                    <li><a class="dropdown-item" data-target-name="longitude" data-op-name="clear-all">すべての行を消去
-                    </a></li>
-                    <li><a class="dropdown-item" data-target-name="longitude" data-op-name="clear-checked">チェックされた行を消去
-                    </a></li>
-                    <li><a class="dropdown-item" data-target-name="longitude" data-op-name="clear-unchecked">チェックされていない行を消去
-                    </a></li>
+                    <!-- <li><a class="dropdown-item" data-target-name="longitude" data-op-name="clear-all">すべての行を消去</a></li> -->
+                    <li><a class="dropdown-item" data-target-name="longitude" data-op-name="clear-checked" title="チェックされた行の経度を消去します。"><i class="bi bi-eraser-fill me-1"></i>選択された経度を消去</a></li>
+                    <!-- <li><a class="dropdown-item" data-target-name="longitude" data-op-name="clear-unchecked">チェックされていない行を消去</a></li> -->
                   </ul>
                 </div>
               </div>
@@ -215,13 +206,10 @@
                     <i class="bi bi-three-dots-vertical"></i>
                   </button>
                   <ul class="dropdown-menu">
-                    <li><a class="dropdown-item" data-target-name="elevation" data-op-name="replace-all" title="標高を国土地理院の標高に置き換えます。">国土地理院の標高で更新</a></li>
-                    <li><a class="dropdown-item" data-target-name="elevation" data-op-name="clear-all">すべての行を消去
-                    </a></li>
-                    <li><a class="dropdown-item" data-target-name="elevation" data-op-name="clear-checked">チェックされた行を消去
-                    </a></li>
-                    <li><a class="dropdown-item" data-target-name="elevation" data-op-name="clear-unchecked">チェックされていない行を消去
-                    </a></li>
+                    <!-- <li><a class="dropdown-item" data-target-name="elevation" data-op-name="clear-all">すべての行を消去</a></li> -->
+                    <li><a class="dropdown-item" data-target-name="elevation" data-op-name="clear-checked" title="チェックされた行の標高を消去します。"><i class="bi bi-eraser-fill me-1"></i>選択された標高を消去</a></li>
+                    <!-- <li><a class="dropdown-item" data-target-name="elevation" data-op-name="clear-unchecked">チェックされていない行を消去</a></li> -->
+                    <li><a class="dropdown-item" data-target-name="elevation" data-op-name="replace-all" title="チェックされた行の標高を国土地理院の標高に置き換えます。"><i class="bi bi-pin-map-fill me-1"></i>国土地理院の標高で更新</a></li>
                   </ul>
                 </div>
               </div>
