Implemented the replace-elevation function.

--- a/index.html
+++ b/index.html
@@ -132,6 +132,9 @@
         </button>
       </div>
 
+
+      
+
       <table id="data-table" class="table table-sm table-borderless table-hover w-100 d-none">
         <thead>
           <tr>
@@ -209,7 +212,7 @@
                     <!-- <li><a class="dropdown-item" data-target-name="elevation" data-op-name="clear-all">すべての行を消去</a></li> -->
                     <li><a class="dropdown-item" data-target-name="elevation" data-op-name="clear-checked" title="チェックされた行の標高を消去します。"><i class="bi bi-eraser-fill me-1"></i>選択された標高を消去</a></li>
                     <!-- <li><a class="dropdown-item" data-target-name="elevation" data-op-name="clear-unchecked">チェックされていない行を消去</a></li> -->
-                    <li><a class="dropdown-item" data-target-name="elevation" data-op-name="replace-all" title="チェックされた行の標高を国土地理院の標高に置き換えます。"><i class="bi bi-pin-map-fill me-1"></i>国土地理院の標高で更新</a></li>
+                    <li><a class="dropdown-item" data-target-name="elevation" data-op-name="replace-checked" title="チェックされた行の標高を国土地理院の標高に置き換えます。"><i class="bi bi-pin-map-fill me-1"></i>国土地理院の標高で更新</a></li>
                   </ul>
                 </div>
               </div>
