Implemented the alert box.

--- a/index.html
+++ b/index.html
@@ -132,8 +132,9 @@
         </button>
       </div>
 
-
-      
+      <div id="alert-container">
+        <!-- Inner alert-box element will be rendered by JS. -->
+      </div>
 
       <table id="data-table" class="table table-sm table-borderless table-hover w-100 d-none">
         <thead>
