--- a/index.html
+++ b/index.html
@@ -149,10 +149,10 @@
                     <i class="bi bi-three-dots-vertical"></i>
                   </button>
                   <ul class="dropdown-menu">
-                    <li><a class="dropdown-item" data-target-name="check" data-op-name="turn-on"><i class="bi bi-check-square me-2"></i>チェック ON
+                    <li><a class="dropdown-item" data-target-name="check" data-op-name="turn-on" title="すべての行のチェックボックスをONにします。" data-bs-toggle="tooltip" data-bs-placement="right"><i class="bi bi-check-square me-2"></i>チェック ON
                     </a></li>
-                    <li><a class="dropdown-item" data-target-name="check" data-op-name="turn-off"><i class="bi bi-square me-2"></i>チェック OFF</a></li>
-                    <li><a class="dropdown-item" data-target-name="check" data-op-name="toggle"><i class="bi bi-arrow-repeat me-2"></i>チェック反転</a></li>
+                    <li><a class="dropdown-item" data-target-name="check" data-op-name="turn-off" title="すべての行のチェックボックスをOFFにします。" data-bs-toggle="tooltip" data-bs-placement="right"><i class="bi bi-square me-2"></i>チェック OFF</a></li>
+                    <li><a class="dropdown-item" data-target-name="check" data-op-name="toggle" title="チェックボックスの状態を反転させます。" data-bs-toggle="tooltip" data-bs-placement="right"><i class="bi bi-arrow-repeat me-2"></i>チェック反転</a></li>
                   </ul>
                 </div>
               </div>
@@ -165,10 +165,8 @@
                     <i class="bi bi-three-dots-vertical"></i>
                   </button>
                   <ul class="dropdown-menu">
-                    <!-- <li><a class="dropdown-item" data-target-name="datetime" data-op-name="clear-all">すべての行を消去</a></li> -->
-                    <li><a class="dropdown-item" data-target-name="datetime" data-op-name="clear-checked" title="チェックされた行の日時を消去します。"><i class="bi bi-eraser-fill me-2"></i>選択された日時を消去</a></li>
-                    <!-- <li><a class="dropdown-item" data-target-name="datetime" data-op-name="clear-unchecked">チェックされていない行を消去</a></li> -->
-                    <li><a class="dropdown-item" data-target-name="datetime" data-op-name="shift-datetime" title="すべてのポイントの通過日時を指定された秒数だけずらします。"><i class="bi bi-arrow-down-square me-2"></i>すべての日時をずらす</a></li>
+                    <li><a class="dropdown-item" data-target-name="datetime" data-op-name="clear-checked" title="チェックされた行の日時を消去します。" data-bs-toggle="tooltip" data-bs-placement="right"><i class="bi bi-eraser-fill me-2"></i>選択された日時を消去</a></li>
+                    <li><a class="dropdown-item" data-target-name="datetime" data-op-name="shift-datetime" title="すべてのポイントの通過日時を指定された秒数だけずらします。" data-bs-toggle="tooltip" data-bs-placement="right"><i class="bi bi-arrow-down-square me-2"></i>すべての日時をずらす</a></li>
                   </ul>
                 </div>
               </th>
@@ -181,9 +179,7 @@
                     <i class="bi bi-three-dots-vertical"></i>
                   </button>
                   <ul class="dropdown-menu">
-                    <!-- <li><a class="dropdown-item" data-target-name="latitude" data-op-name="clear-all">すべての行を消去</a></li> -->
-                    <li><a class="dropdown-item" data-target-name="latitude" data-op-name="clear-checked" title="チェックされた行の緯度を消去します。"><i class="bi bi-eraser-fill me-2"></i>選択された緯度を消去</a></li>
-                    <!-- <li><a class="dropdown-item" data-target-name="latitude" data-op-name="clear-unchecked">チェックされていない行を消去</a></li> -->
+                    <li><a class="dropdown-item" data-target-name="latitude" data-op-name="clear-checked" title="チェックされた行の緯度を消去します。" data-bs-toggle="tooltip" data-bs-placement="right"><i class="bi bi-eraser-fill me-2"></i>選択された緯度を消去</a></li>
                   </ul>
                 </div>
               </div>
@@ -196,9 +192,7 @@
                     <i class="bi bi-three-dots-vertical"></i>
                   </button>
                   <ul class="dropdown-menu">
-                    <!-- <li><a class="dropdown-item" data-target-name="longitude" data-op-name="clear-all">すべての行を消去</a></li> -->
-                    <li><a class="dropdown-item" data-target-name="longitude" data-op-name="clear-checked" title="チェックされた行の経度を消去します。"><i class="bi bi-eraser-fill me-2"></i>選択された経度を消去</a></li>
-                    <!-- <li><a class="dropdown-item" data-target-name="longitude" data-op-name="clear-unchecked">チェックされていない行を消去</a></li> -->
+                    <li><a class="dropdown-item" data-target-name="longitude" data-op-name="clear-checked" title="チェックされた行の経度を消去します。" data-bs-toggle="tooltip" data-bs-placement="right"><i class="bi bi-eraser-fill me-2"></i>選択された経度を消去</a></li>
                   </ul>
                 </div>
               </div>
@@ -211,10 +205,8 @@
                     <i class="bi bi-three-dots-vertical"></i>
                   </button>
                   <ul class="dropdown-menu">
-                    <!-- <li><a class="dropdown-item" data-target-name="elevation" data-op-name="clear-all">すべての行を消去</a></li> -->
-                    <li><a class="dropdown-item" data-target-name="elevation" data-op-name="clear-checked" title="チェックされた行の標高を消去します。"><i class="bi bi-eraser-fill me-2"></i>選択された標高を消去</a></li>
-                    <!-- <li><a class="dropdown-item" data-target-name="elevation" data-op-name="clear-unchecked">チェックされていない行を消去</a></li> -->
-                    <li><a class="dropdown-item" data-target-name="elevation" data-op-name="replace-checked" title="チェックされた行の標高を国土地理院の標高に置き換えます。"><i class="bi bi-pin-map-fill me-2"></i>国土地理院の標高で更新</a></li>
+                    <li><a class="dropdown-item" data-target-name="elevation" data-op-name="clear-checked" title="チェックされた行の標高を消去します。" data-bs-toggle="tooltip" data-bs-placement="right"><i class="bi bi-eraser-fill me-2"></i>選択された標高を消去</a></li>
+                    <li><a class="dropdown-item" data-target-name="elevation" data-op-name="replace-checked" title="チェックされた行の標高を国土地理院の標高に置き換えます。" data-bs-toggle="tooltip" data-bs-placement="right"><i class="bi bi-pin-map-fill me-2"></i>国土地理院の標高で更新</a></li>
                   </ul>
                 </div>
               </div>
