Updated the fillEmptyDateTime function.

--- a/index.html
+++ b/index.html
@@ -166,6 +166,7 @@
                   </button>
                   <ul class="dropdown-menu">
                     <li><a class="dropdown-item" data-target-name="datetime" data-op-name="clear-checked" title="チェックされた行の日時を消去します。" data-bs-toggle="tooltip" data-bs-placement="right"><i class="bi bi-eraser-fill me-2"></i>選択された日時を消去</a></li>
+                    <li><hr class="dropdown-divider"></li>
                     <li><a class="dropdown-item" data-target-name="datetime" data-op-name="shift-datetime" title="すべてのポイントの通過日時を指定された秒数だけずらします。" data-bs-toggle="tooltip" data-bs-placement="right"><i class="bi bi-arrow-down-square me-2"></i>すべての日時をずらす</a></li>
                     <li><a class="dropdown-item" data-target-name="datetime" data-op-name="reverse-datetime" title="すべてのポイントの通過日時の順序を逆にします。" data-bs-toggle="tooltip" data-bs-placement="right"><i class="bi bi-arrow-down-up me-2"></i>すべての日時を反転</a></li>
                     <li><a class="dropdown-item" data-target-name="datetime" data-op-name="fill-datetime" title="入力されていない日時を、その前後のポイントの通過日時と標高から計算し、補間します。" data-bs-toggle="tooltip" data-bs-placement="right"><i class="bi bi-clock-history me-2"></i>未入力の日時を補間</a></li>
