--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=M+PLUS+1p:wght@400;500;700&display=swap" rel="stylesheet">
 
-  <link rel="stylesheet" href="./styles/css/styles.css">
+  <link rel="stylesheet" href="./styles/styles.css">
 
   <title>GPX Trail Editor</title>
 
