--- a/index.html
+++ b/index.html
@@ -251,7 +251,7 @@
     <i class="bi bi-arrow-up"></i>
   </button>
 
-  <!-- Modal Dialog with the Cancel and OK buttons -->
+  <!-- Modal Dialog with a cancel and a confirm buttons -->
   <div class="modal fade" id="modal-cancel-confirm" tabindex="-1" aria-hidden="true">
     <div class="modal-dialog">
       <div class="modal-content">
@@ -263,6 +263,24 @@
         <div class="modal-footer">
           <button type="button" class="btn btn-secondary btn-cancel" data-bs-dismiss="modal">Cancel</button>
           <button type="button" class="btn btn-primary btn-confirm">Confirm</button>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <!-- Modal Dialog with a cancel and two more buttons -->
+  <div class="modal fade" id="modal-question" tabindex="-1" aria-hidden="true">
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title">Modal title</h5>
+          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+        </div>
+        <div class="modal-body">The modal body goes here...</div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-secondary btn-cancel" data-bs-dismiss="modal">Cancel</button>
+          <button type="button" class="btn btn-primary btn-option1">Option 1</button>
+          <button type="button" class="btn btn-primary btn-option2">Option 2</button>
         </div>
       </div>
     </div>
