--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <div class="justify-content-end" id="nav-buttons">
           <button id="btn-nav-create-new" class="btn btn-sm btn-light d-none">新規作成</button>
           <button id="btn-nav-export" class="btn btn-sm btn-primary d-none"><i class="bi bi-download me-2"></i>エクスポート</button>
-          <button id="btn-nav-start-over" class="btn btn-sm btn-danger d-none"><i class="bi bi-trash me-2"></i>破棄</button>
+          <button id="btn-nav-start-over" class="btn btn-sm btn-danger d-none"><!-- i class="bi bi-trash me-2"></! --><i class="bi bi-arrow-clockwise"></i> 最初から</button>
           <a id="goto-github" class="btn btn-link" href="https://github.com/bunatree/gpx-trail-editor" title="GitHubレポジトリを開く"><i class="bi bi-github"></i></a>
         </div>
       </div>
