--- a/index.html
+++ b/index.html
@@ -15,6 +15,11 @@
 
   <link rel="stylesheet" href="./styles/styles.css">
 
+  <link rel="icon" href="./favicon.ico" sizes="32x32"><!-- 32×32 -->
+  <link rel="icon" href="./icon.svg" type="image/svg+xml">
+  <link rel="apple-touch-icon" href="./apple-touch-icon.png"><!-- 180×180 -->
+  <!-- <link rel="manifest" href="/manifest.webmanifest"> -->
+
   <title>GPX Trail Editor</title>
 
 </head>
