--- a/index.html
+++ b/index.html
@@ -18,7 +18,6 @@
   <link rel="icon" href="./favicon.ico" sizes="32x32"><!-- 32×32 -->
   <link rel="icon" href="./icon.svg" type="image/svg+xml">
   <link rel="apple-touch-icon" href="./apple-touch-icon.png"><!-- 180×180 -->
-  <!-- <link rel="manifest" href="/manifest.webmanifest"> -->
 
   <title>GPX Trail Editor</title>
 
@@ -50,15 +49,16 @@
 
           <div id="drop-zone-form" class="mt-3 mb-3 p-3 border rounded d-flex flex-column justify-content-center">
             <i class="bi bi-cloud-upload text-center fs-3"></i>
-            <span class="drop-zone-prompt text-center">ここにGPXファイルをドロップまたはクリックして選択</span>
+            <div class="drop-zone-prompt text-center">
+              <div class="drop-note h5">GPX ファイルをドラッグ&ドロップ</div>
+              <div class="drop-subnote">またはクリックしてアップロード</div>
+            </div>
             <input type="file" id="upload-gpx-fileinput" class="d-none" accept=".gpx" area-hidden="true">
           </div>
-        
 
         <div id="log-name-form" class="input-group mt-3 mb-3 d-none">
           <label class="input-group-text" for="log-name-input">タイトル</label>
           <input id="log-name-input" type="text" class="form-control" />
-          <button id="apply-name-button" class="btn btn-secondary" disabled>適用</button>
         </div>
 
         <h2 class="d-none">Map</h2>
@@ -105,8 +105,7 @@
                       <i class="bi bi-three-dots-vertical"></i>
                     </button>
                     <ul class="dropdown-menu">
-                      <li><a class="dropdown-item" data-target-name="idx" data-op-name="reverse" title="スタートからゴールへのルート順序を反転させます。" data-bs-toggle="tooltip" data-bs-placement="right"><i class="bi bi-arrow-down-up me-2"></i>ルート反転
-                      </a></li>
+                      <li><a class="dropdown-item" data-target-name="idx" data-op-name="reverse" title="スタートからゴールへのルート順序を反転させます。" data-bs-toggle="tooltip" data-bs-placement="right"><i class="bi bi-arrow-down-up me-2"></i>ルート反転</a></li>
                     </ul>
                   </div>
                 </div>
@@ -119,8 +118,7 @@
                       <i class="bi bi-three-dots-vertical"></i>
                     </button>
                     <ul class="dropdown-menu">
-                      <li><a class="dropdown-item" data-target-name="check" data-op-name="turn-on" title="すべての行のチェックボックスをONにします。" data-bs-toggle="tooltip" data-bs-placement="right"><i class="bi bi-check-square me-2"></i>チェック ON
-                      </a></li>
+                      <li><a class="dropdown-item" data-target-name="check" data-op-name="turn-on" title="すべての行のチェックボックスをONにします。" data-bs-toggle="tooltip" data-bs-placement="right"><i class="bi bi-check-square me-2"></i>チェック ON</a></li>
                       <li><a class="dropdown-item" data-target-name="check" data-op-name="turn-off" title="すべての行のチェックボックスをOFFにします。" data-bs-toggle="tooltip" data-bs-placement="right"><i class="bi bi-square me-2"></i>チェック OFF</a></li>
                       <li><a class="dropdown-item" data-target-name="check" data-op-name="toggle" title="チェックボックスの状態を反転させます。" data-bs-toggle="tooltip" data-bs-placement="right"><i class="bi bi-arrow-repeat me-2"></i>チェック反転</a></li>
                     </ul>
@@ -251,12 +249,27 @@
     <div class="mb-2">Copyright (c) 2024 Bunatree Melonpan</div>
     <div class="mb-2"><a href="https://github.com/bunatree/gpx-trail-editor">GitHub</a> <a href="https://github.com/bunatree/gpx-trail-editor?tab=MIT-1-ov-file#readme">MIT License</a></div>
     <div class="mb-2">Powered by Leaflet, Bootstrap, and more.</div>
-    <!-- <div class="mb-2">Created by <img src="./images/melonpan.png" class="avatar rounded-circle" title="melonpan" /> at <a href="https://github.com/bunatree">GitHub</a>, <a href="https://www.yamareco.com/modules/yamareco/userinfo-3521-prof.html">Yamareco</a>, and <a href="https://yamap.com/users/2697255">YAMAP</a>.</div> -->
   </footer>
 
   <button type="button" id="scroll-to-top" class="btn btn-secondary btn-floating btn-lg opacity-75" onclick="GpxTrailEditor.scrollToTop()">
     <i class="bi bi-arrow-up"></i>
   </button>
+
+  <!-- Modal Dialog with an OK button -->
+  <div class="modal fade" id="modal-ok" tabindex="-1" aria-hidden="true">
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title">Modal title</h5>
+          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+        </div>
+        <div class="modal-body">The modal body goes here...</div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-primary btn-confirm" data-bs-dismiss="modal">OK</button>
+        </div>
+      </div>
+    </div>
+  </div>
 
   <!-- Modal Dialog with a cancel and a confirm buttons -->
   <div class="modal fade" id="modal-cancel-confirm" tabindex="-1" aria-hidden="true">
