--- a/index.html
+++ b/index.html
@@ -3,6 +3,19 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  
+  <title>GPX Trail Editor</title>
+  <meta name="description" content="GPXファイルを読み込んで、地図に描かれたポイントやルートを編集するWebアプリ">
+  <meta property="og:title" content="GPX Trail Editor">
+  <meta property="og:description" content="GPXファイルを読み込んで、地図に描かれたポイントやルートを編集するWebアプリ">
+  <meta property="og:url" content="https://github.com/bunatree/gpx-trail-editor">
+  <meta property="og:image" content="images/icon512.png">
+  <meta property="og:type" content="website">
+  <meta property="og:site_name" content="GPX Trail Editor">
+  <meta property="og:locale" content="ja_JP">
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:site" content="@bunatree">
+  <link rel="canonical" href="https://github.com/bunatree/gpx-trail-editor">
 
   <link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css" />
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
@@ -19,8 +32,10 @@
   <link rel="icon" href="./icon.svg" type="image/svg+xml">
   <link rel="apple-touch-icon" href="./apple-touch-icon.png"><!-- 180×180 -->
 
-  <title>GPX Trail Editor</title>
+  
 
+
+  
 </head>
 <body>
 
@@ -248,7 +263,7 @@
     <h2 class="h5">GPX Trail Editor</h2>
     <div class="mb-2">Copyright (c) 2024 Bunatree Melonpan</div>
     <div class="mb-2"><a href="https://github.com/bunatree/gpx-trail-editor">GitHub</a> <a href="https://github.com/bunatree/gpx-trail-editor?tab=MIT-1-ov-file#readme">MIT License</a></div>
-    <div class="mb-2">Powered by Leaflet, Bootstrap, and more.</div>
+    <!-- <div class="mb-2">Powered by Leaflet, Bootstrap, and more.</div> -->
   </footer>
 
   <button type="button" id="scroll-to-top" class="btn btn-secondary btn-floating btn-lg opacity-75" onclick="GpxTrailEditor.scrollToTop()">
